fixed almost all gaps

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 body{
     user-select: none;
+    overflow-x: hidden;
 }
 
 .navbar{
